# jvlink-db-python

./: .gitignore  .gitmodules  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yml
doc/: PLAN.md  SPEC.md
doc/PR/: PR01.md  PR02.md  PR03.md  PR04.md  PR05.md
example/: basic_usage.py  initialize_db.py  race_data_fetch.py  update_database.py
jvlink_db_python/: __init__.py  exceptions.py  manager.py
jvlink_db_python/models/: __init__.py
jvlink_db_python/utils/: __init__.py  code_converter.py  config.py  id_converter.py
test/: conftest.py
test/integration/: conftest.py
test/unit/: test_placeholder.py
test/unit/fetcher/: conftest.py
test/unit/manager/: conftest.py  test_initialize_database.py  test_manager_init.py
test/unit/utils/code_converter/: conftest.py  test_baba_code_to_str.py  test_grade_code_to_str.py  test_jyo_code_to_name.py  test_sex_code_to_str.py  test_track_code_to_str.py  test_weather_code_to_str.py  test_weight_type_code_to_str.py
test/unit/utils/config/: conftest.py  test_load_config.py
test/unit/utils/id_converter/: conftest.py  test_date_id_to_race_id.py  test_jvlink_to_date_id.py  test_jvlink_to_race_id.py  test_race_id_to_jvlink.py
