[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jvlink-db-python"
version = "0.1.0"
description = "JV-Linkデータベースからのデータ取得を簡単にするPythonライブラリ"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "KeibaAI Project"}
]
keywords = ["jvlink", "horse-racing", "keiba", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "flake8-docstrings>=1.7.0",
    "darglint>=1.8.1",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/KeibaAI/jvlink-db-python"
Documentation = "https://github.com/KeibaAI/jvlink-db-python/blob/main/README.md"
Repository = "https://github.com/KeibaAI/jvlink-db-python"
Issues = "https://github.com/KeibaAI/jvlink-db-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jvlink_db_python*"]
exclude = ["test*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=jvlink_db_python",
    "--cov-report=term-missing",
    "--cov-report=html",
]
